--- a/Project_4.ipynb
+++ b/Project_4.ipynb
@@ -13,6 +13,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Ensure skl2onnx is installed for model conversion to ONNX format.\n",
         "!pip install skl2onnx"
       ],
       "metadata": {
@@ -24,7 +25,7 @@
         "outputId": "4f5e56f5-87ad-4404-c4fd-a919e696d48a"
       },
       "id": "j5qoWaKw6O3T",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "fb025362-b9ae-4d13-852c-cb77468b1a4e",
       "metadata": {
         "id": "fb025362-b9ae-4d13-852c-cb77468b1a4e"
@@ -124,12 +125,12 @@
         "id": "kew_6mlm4jRO"
       },
       "id": "kew_6mlm4jRO",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "9cc155c4-003f-44dd-8ab6-59bdebc4db84",
       "metadata": {
         "colab": {
@@ -164,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "b532e9a0-6db3-43ae-8af6-bdd3a4e5160d",
       "metadata": {
         "colab": {
@@ -209,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "617bd401-1cc9-4ee2-b2d7-a57747d59063",
       "metadata": {
         "id": "617bd401-1cc9-4ee2-b2d7-a57747d59063"
@@ -221,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "0cf4b98c-6e0a-46de-9076-3866b20e5bbe",
       "metadata": {
         "colab": {
@@ -593,7 +594,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "ff70d766-521c-4d11-94a5-2c750b8c0398",
       "metadata": {
         "id": "ff70d766-521c-4d11-94a5-2c750b8c0398"
@@ -605,7 +606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "93aa1e0d-a830-4996-8d68-b697d620b776",
       "metadata": {
         "colab": {
@@ -821,7 +822,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "f07af91b-7a3e-41dc-a87d-3c476a97d99c",
       "metadata": {
         "colab": {
@@ -848,7 +849,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "d399bc76-9ac7-4cb0-9eee-dad66abdac3a",
       "metadata": {
         "scrolled": true,
@@ -919,7 +920,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "424c189c-e126-44e7-9260-a1e99512f600",
       "metadata": {
         "colab": {
@@ -957,7 +958,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "fd109cfc-1b1c-4b0d-b1e4-cef7e92ad0f2",
       "metadata": {
         "colab": {
@@ -2224,7 +2225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "b1009451-be92-4a38-af2a-811d13a3b471",
       "metadata": {
         "colab": {
@@ -2440,7 +2441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "8f655ba3-e466-40a4-bfe3-bd38e12edb6a",
       "metadata": {
         "id": "8f655ba3-e466-40a4-bfe3-bd38e12edb6a"
@@ -2453,7 +2454,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "7c752fde-99b4-4384-abe8-d11b73648d63",
       "metadata": {
         "colab": {
@@ -3056,7 +3057,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "4d8c41c8-e6bf-4d24-9504-e417ecd8a123",
       "metadata": {
         "colab": {
@@ -3083,7 +3084,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "c2d357a4-7ed8-4143-9660-e973e1d14e24",
       "metadata": {
         "colab": {
@@ -3110,7 +3111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "a7e17c88-1fee-48e7-a62d-72fe336a5111",
       "metadata": {
         "colab": {
@@ -3137,7 +3138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "ddfe7f0b-dc84-4ece-9407-08d0608b0d2f",
       "metadata": {
         "colab": {
@@ -3164,7 +3165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "e9670fcf-dad7-44d4-a066-9732e6be4e46",
       "metadata": {
         "colab": {
@@ -3191,7 +3192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "25ee83d8-a4a6-4525-9928-881ea4b51722",
       "metadata": {
         "id": "25ee83d8-a4a6-4525-9928-881ea4b51722"
@@ -3205,7 +3206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "7061d886-5c45-4c19-a498-a4be315333b0",
       "metadata": {
         "colab": {
@@ -3658,7 +3659,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "9d54ca84-a327-4551-9bf1-22745bd36c1f",
       "metadata": {
         "id": "9d54ca84-a327-4551-9bf1-22745bd36c1f"
@@ -3672,7 +3673,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "eb6681fb-c009-48db-95a4-d5348f9e4b4e",
       "metadata": {
         "colab": {
@@ -3967,7 +3968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "e3d6546c-26c7-456b-ac9b-bf96d80e60ff",
       "metadata": {
         "colab": {
@@ -4025,7 +4026,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "d8d09658-2829-4031-9d43-80e3eef7ff5b",
       "metadata": {
         "colab": {
@@ -4087,7 +4088,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "c8d0de66-068e-45d0-8d8c-086f1bd07ddf",
       "metadata": {
         "colab": {
@@ -4169,12 +4170,12 @@
         "id": "2c4ac992-88db-4ae2-b73b-b3bd56693181"
       },
       "source": [
-        "second try"
+        "second try ( The model used for integrate with Flask for the frontend UI )"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "e85485a2-a8a5-4809-8821-763540807f44",
       "metadata": {
         "id": "e85485a2-a8a5-4809-8821-763540807f44",
@@ -4265,7 +4266,7 @@
         "outputId": "424f629c-4251-4b63-809f-9247212d92f5"
       },
       "id": "Kewm2AHoNgXM",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4279,7 +4280,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "# Create a StandardScaler object\n",
         "scaler = StandardScaler()\n",
         "\n",
@@ -4300,7 +4300,7 @@
         "outputId": "eb24bdf6-6500-4fd3-cdfb-f59c24e47159"
       },
       "id": "Obj6gvptePTA",
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4345,12 +4345,12 @@
         "id": "T_DuUo3JdVeB"
       },
       "id": "T_DuUo3JdVeB",
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "id": "9a1a04f7-0394-44ce-8344-4f01f0904ce8",
       "metadata": {
         "colab": {
