--- a/Project_4.ipynb
+++ b/Project_4.ipynb
@@ -4165,14 +4165,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 43,
       "id": "c8d0de66-068e-45d0-8d8c-086f1bd07ddf",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "c8d0de66-068e-45d0-8d8c-086f1bd07ddf",
-        "outputId": "e44d1db5-0b77-48da-c054-df84698baade"
+        "outputId": "524f83e4-c8f2-48b0-a15c-a68d7b2280e5"
       },
       "outputs": [
         {
@@ -4182,12 +4182,12 @@
             "Classification Report:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.79      0.81      0.80      3335\n",
-            "           1       0.80      0.78      0.79      3283\n",
+            "           0       0.75      0.77      0.76      3335\n",
+            "           1       0.76      0.75      0.75      3283\n",
             "\n",
-            "    accuracy                           0.80      6618\n",
-            "   macro avg       0.80      0.80      0.80      6618\n",
-            "weighted avg       0.80      0.80      0.80      6618\n",
+            "    accuracy                           0.76      6618\n",
+            "   macro avg       0.76      0.76      0.76      6618\n",
+            "weighted avg       0.76      0.76      0.76      6618\n",
             "\n"
           ]
         }
@@ -4205,9 +4205,9 @@
         "\n",
         "# Randomly undersample the majority class\n",
         "df_majority_undersampled = resample(df_majority,\n",
-        "                                     replace=False,  # do not want to replace\n",
-        "                                     n_samples=num_minority,  # match minority class\n",
-        "                                     random_state=42)  # reproducible results\n",
+        "                                    replace=False,  # do not want to replace\n",
+        "                                    n_samples=num_minority,  # match minority class\n",
+        "                                    random_state=42)  # reproducible results\n",
         "\n",
         "# Combine undersampled majority class with original minority class\n",
         "df_balanced = pd.concat([df_majority_undersampled, df_minority])\n",
@@ -4222,15 +4222,42 @@
         "# One-hot encode categorical variables\n",
         "X = pd.get_dummies(X, drop_first=True)\n",
         "\n",
+        "# Filter features based on the provided names\n",
+        "selected_features = [\n",
+        "    'current_address_months_count',\n",
+        "    'credit_risk_score',\n",
+        "    'device_os_windows',\n",
+        "    'name_email_similarity',\n",
+        "    'intended_balcon_amount',\n",
+        "    'income',\n",
+        "    'days_since_request',\n",
+        "    'session_length_in_minutes',\n",
+        "    'velocity_24h',\n",
+        "    'velocity_6h',\n",
+        "    'device_fraud_count',\n",
+        "    'bank_branch_count_8w',\n",
+        "    'bank_months_count',\n",
+        "    'customer_age',\n",
+        "    'has_other_cards',\n",
+        "]\n",
+        "\n",
+        "# Select only the filtered features\n",
+        "X = X[selected_features]\n",
+        "\n",
         "# Split the data into training and testing sets\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
         "\n",
+        "# Scale the features\n",
+        "scaler = StandardScaler()\n",
+        "X_train_scaled = scaler.fit_transform(X_train)\n",
+        "X_test_scaled = scaler.transform(X_test)\n",
+        "\n",
         "# Train the model with balanced class weights\n",
         "model = RandomForestClassifier(class_weight='balanced', random_state=42)\n",
-        "model.fit(X_train, y_train)\n",
+        "model.fit(X_train_scaled, y_train)\n",
         "\n",
         "# Make predictions\n",
-        "y_pred = model.predict(X_test)\n",
+        "y_pred = model.predict(X_test_scaled)\n",
         "\n",
         "# Print classification report\n",
         "print(\"Classification Report:\")\n",
@@ -4243,11 +4270,11 @@
         "print(pd.Series(y_train).value_counts())"
       ],
       "metadata": {
-        "id": "fny5cV7KSlBn",
-        "outputId": "1e0908c8-14e6-43ad-ac54-3b7b0404ce33",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fny5cV7KSlBn",
+        "outputId": "1e0908c8-14e6-43ad-ac54-3b7b0404ce33"
       },
       "id": "fny5cV7KSlBn",
       "execution_count": 34,
@@ -4260,6 +4287,68 @@
             "1    692280\n",
             "0    692279\n",
             "Name: count, dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "onnx_filename = 'model.onnx'\n",
+        "input_dim = X_train_scaled.shape[1]\n",
+        "\n",
+        "# Convert the model to ONNX format and save it\n",
+        "try:\n",
+        "    onnx_model = convert_sklearn(model, initial_types=[('input', FloatTensorType([None, input_dim]))], target_opset=13)\n",
+        "    with open(onnx_filename, 'wb') as file:\n",
+        "        file.write(onnx_model.SerializeToString())\n",
+        "    print(f\"Model saved to {onnx_filename}\")\n",
+        "except Exception as e:\n",
+        "    print(f\"Error converting or saving model: {e}\")"
+      ],
+      "metadata": {
+        "id": "SQKBMFWgZO7A",
+        "outputId": "5eeb0098-e971-4976-fd50-5b7dd895e4f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "SQKBMFWgZO7A",
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model saved to model.onnx\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Save the fitted scaler to a file using pickle\n",
+        "with open('scaler.pkl', 'wb') as scaler_file:\n",
+        "    pickle.dump(scaler, scaler_file)\n",
+        "\n",
+        "print(\"Scaler saved to scaler.pkl\")"
+      ],
+      "metadata": {
+        "id": "3SSbTQdoZf79",
+        "outputId": "4c7af162-dcf5-440f-b913-22505eef791a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "3SSbTQdoZf79",
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Scaler saved to scaler.pkl\n"
           ]
         }
       ]
