--- a/Model_optimization/Model_optimisation.ipynb
+++ b/Model_optimization/Model_optimisation.ipynb
@@ -405,11 +405,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8aa2e368",
+   "cell_type": "markdown",
+   "id": "42a82b27",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### We have tried more models which could be found in secondary branch of this repo.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcc1dd45",
+   "metadata": {},
    "source": []
   }
  ],
